Merging upstream (#32)
* fixed typo

* First commit of re-implementing the settings with javafx - first tab (provider)

* Fix for issue #298 as per https://github.com/langchain4j/langchain4j/issues/4726

* Fix for issue #298 as per https://github.com/langchain4j/langchain4j/issues/4726

* I ran into the same issue so I was able to reproduce it. Both solutions implemented were not working. The good news is that being able to reproduce the issue, I am now more confident of the fix. Replacing the factory service is not enough to guarantee the right classloader is used in module registration. The solution is to decouple service creation from module registration and force the classloader in the latter.

* cleanup

* Creating a javafx settings panel from the test ui

* Add comprehensive PreferencesManager unit tests

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* Use DummyProject in PreferencesManagerFullTest build/test detection to avoid NetBeans project loading

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* Skip PromptsPanel UI tests in surefire (exclude pattern) to avoid headless UI failures in CI

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* Add extended PreferencesManager tests to increase coverage (many getters/setters and behaviors)

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* Fix gradle_build_detection test: remove pom.xml so Gradle is detected

* Expand PreferencesManagerFullTest to cover chatModel, prompts restoration, GenAI model error paths, import edge cases, Ant/Gradle detection, and class context getters/setters

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* Fix assertion for import_nonexistent_throws to use fully-qualified thenThrownBy

* Adjust prompts restoration test to match current behavior: defaults saved to storage but not returned in-memory

* Cover remaining PreferencesManager methods: provider location, error cases, 